-----------------------------------------------------------------------------
#                                                                           #
#                                                                           #
#                                  Changelog                                #
#                                                                           #
#                                                                           #
-----------------------------------------------------------------------------

v0.001:
-Implemented basic graphics module
-Improved Documentation