@@ -1,16 +1,16 @@
 #pragma once
 #include "Renderable.h"
-#include "Enumeration.h"
+#include "TexturesEnumeration.h"
 
 class Entity : 
 	public Renderable
 {
 public:
-	Entity(int xPos, int yPos, Graphics* nGraphics, Enumeration::TEXTURES_NAME nTexture, int const * FRAME_COUNT, int const * FRAME_WIDTH, int const * FRAME_HEIGHT);
+	Entity(int x, int y, Graphics* graphics, TexturesEnumeration::TEXTURES_NAME texture, int const* FRAME_COUNT, int const* FRAME_WIDTH, int const* FRAME_HEIGHT);
 	~Entity();
 	virtual void render();
 private:
-	Enumeration::TEXTURES_NAME texture;
+	TexturesEnumeration::TEXTURES_NAME texture;
 	int currentFrame;
 	int const* FRAME_COUNT;
 	int const* FRAME_WIDTH;
