@@ -1,0 +1,9 @@
+#pragma once
+class Functions
+{
+public:
+	Functions();
+	~Functions();
+	static int generateRandomNumber(int start, int end);
+};
+
