@@ -1,0 +1,14 @@
+//This class handels enumerations for Textures
+#pragma once
+
+class TexturesEnumeration
+{
+public:
+	typedef enum TEXTURES_NAME
+	{
+		TEXTURE_EMPTY=0,
+		TEXTURE_EARTH,
+		TEXTURE_2,
+		TEXTURES_COUNT
+	};
+};
